[package]
name = "stellflow-escrow"
version = "0.1.0"
edition = "2021"
description = "StellFlow Escrow Contract — Soroban/Stellar"

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar-strkey = "0.0.8"
