[package]
name = "stellflow-escrow"
version = "0.1.0"
edition = "2021"
description = "StellFlow Escrow Contract — Soroban/Stellar"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
